dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(opensm, 3.1.1, general@lists.openfabrics.org)
AC_CONFIG_SRCDIR([opensm/osm_opensm.c])
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(opensm, 3.1.1)

dnl Defines the Language
AC_LANG_C

dnl Provides control over re-making of all auto files
dnl We also use it to define swig dependencies so end
dnl users do not see them.
AM_MAINTAINER_MODE

dnl Required for cases make defines a MAKE=make ??? Why
AC_PROG_MAKE_SET

dnl Define an input config option to control debug compile
AC_ARG_ENABLE(debug,
[  --enable-debug    Turn on debugging],
[case "${enableval}" in
  yes) debug=true ;;
  no)  debug=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
esac],[debug=false])
AM_CONDITIONAL(DEBUG, test x$debug = xtrue)

dnl check if they want the socket console
OPENIB_OSM_CONSOLE_SOCKET_SEL

dnl select performance manager or not
OPENIB_OSM_PERF_MGR_SEL

dnl select example event plugin or not
OPENIB_OSM_DEFAULT_EVENT_PLUGIN_SEL

dnl Provide user option to select vendor
OPENIB_APP_OSMV_SEL

dnl Configure the following subdirs
AC_CONFIG_SUBDIRS(complib libvendor opensm osmtest include osmeventplugin)

dnl Create the following Makefiles
AC_OUTPUT(Makefile)
AC_OUTPUT(opensm.spec)
