
SUBDIRS = .

nobase_pkginclude_HEADERS = iba/ib_types.h iba/ib_cm_types.h

EXTRA_DIST = \
	$(srcdir)/opensm/osm_sa_path_record.h \
	$(srcdir)/opensm/osm_lid_mgr.h \
	$(srcdir)/opensm/osm_port.h \
	$(srcdir)/opensm/osm_sm_state_mgr.h \
	$(srcdir)/opensm/osm_state_mgr.h \
	$(srcdir)/opensm/osm_rand_fwd_tbl.h \
	$(srcdir)/opensm/osm_sa_vlarb_record.h \
	$(srcdir)/opensm/osm_madw.h \
	$(srcdir)/opensm/osm_subnet.h \
	$(srcdir)/opensm/osm_sweep_fail_ctrl.h \
	$(srcdir)/opensm/osm_sa_lft_record.h \
	$(srcdir)/opensm/osm_sa_mft_record.h \
	$(srcdir)/opensm/osm_resp.h \
	$(srcdir)/opensm/osm_partition.h \
	$(srcdir)/opensm/osm_helper.h \
	$(srcdir)/opensm/osm_sa_portinfo_record.h \
	$(srcdir)/opensm/osm_sa_guidinfo_record.h \
	$(srcdir)/opensm/osm_sa_multipath_record.h \
	$(srcdir)/opensm/osm_sa_service_record.h \
	$(srcdir)/opensm/osm_sa_response.h \
	$(srcdir)/opensm/osm_node.h \
	$(srcdir)/opensm/osm_console.h \
	$(srcdir)/opensm/osm_req.h \
	$(srcdir)/opensm/osm_mcm_info.h \
	$(srcdir)/opensm/osm_sa_pkey_record.h \
	$(srcdir)/opensm/osm_inform.h \
	$(srcdir)/opensm/osm_path.h \
	$(srcdir)/opensm/osm_service.h \
	$(srcdir)/opensm/osm_switch.h \
	$(srcdir)/opensm/osm_router.h \
	$(srcdir)/opensm/osm_prefix_route.h \
	$(srcdir)/opensm/osm_sa_slvl_record.h \
	$(srcdir)/opensm/osm_opensm.h \
	$(srcdir)/opensm/osm_sa.h \
	$(srcdir)/opensm/osm_port_profile.h \
	$(srcdir)/opensm/osm_multicast.h \
	$(srcdir)/opensm/osm_sa_class_port_info.h \
	$(srcdir)/opensm/osm_base.h \
	$(srcdir)/opensm/osm_sa_sminfo_record.h \
	$(srcdir)/opensm/osm_mcast_mgr.h \
	$(srcdir)/opensm/osm_errors.h \
	$(srcdir)/opensm/osm_event_plugin.h \
	$(srcdir)/opensm/osm_mtree.h \
	$(srcdir)/opensm/osm_sm.h \
	$(srcdir)/opensm/osm_lin_fwd_tbl.h \
	$(srcdir)/opensm/osm_ucast_mgr.h \
	$(srcdir)/opensm/osm_db.h \
	$(srcdir)/opensm/osm_sa_informinfo.h \
	$(srcdir)/opensm/osm_mad_pool.h \
	$(srcdir)/opensm/osm_remote_sm.h \
	$(srcdir)/opensm/osm_link_mgr.h \
	$(srcdir)/opensm/osm_msgdef.h \
	$(srcdir)/opensm/osm_sa_node_record.h \
	$(srcdir)/opensm/st.h \
	$(srcdir)/opensm/osm_mcast_tbl.h \
	$(srcdir)/opensm/osm_pkey.h \
	$(srcdir)/opensm/osm_pkey_mgr.h \
	$(srcdir)/opensm/osm_sa_mad_ctrl.h \
	$(srcdir)/opensm/osm_sa_link_record.h \
	$(srcdir)/opensm/osm_mcm_port.h \
	$(srcdir)/opensm/osm_log.h \
	$(srcdir)/opensm/osm_fwd_tbl.h \
	$(srcdir)/opensm/osm_db_pack.h \
	$(srcdir)/opensm/osm_sm_mad_ctrl.h \
	$(srcdir)/opensm/osm_attrib_req.h \
	$(srcdir)/opensm/osm_stats.h \
	$(srcdir)/opensm/osm_sa_mcmember_record.h \
	$(srcdir)/opensm/osm_sa_sw_info_record.h \
	$(srcdir)/opensm/osm_vl15intf.h \
	$(srcdir)/opensm/osm_drop_mgr.h \
	$(srcdir)/opensm/osm_perfmgr.h \
	$(srcdir)/opensm/osm_perfmgr_db.h \
	$(srcdir)/opensm/osm_qos_policy.h \
	$(srcdir)/opensm/osm_qos_parser_y.h \
	$(srcdir)/complib/cl_thread_osd.h \
	$(srcdir)/complib/cl_packon.h \
	$(srcdir)/complib/cl_atomic_osd.h \
	$(srcdir)/complib/cl_spinlock.h \
	$(srcdir)/complib/cl_passivelock.h \
	$(srcdir)/complib/cl_timer_osd.h \
	$(srcdir)/complib/cl_debug.h \
	$(srcdir)/complib/cl_event_osd.h \
	$(srcdir)/complib/cl_ptr_vector.h \
	$(srcdir)/complib/cl_comppool.h \
	$(srcdir)/complib/cl_math.h \
	$(srcdir)/complib/cl_qpool.h \
	$(srcdir)/complib/cl_qlist.h \
	$(srcdir)/complib/cl_vector.h \
	$(srcdir)/complib/cl_byteswap_osd.h \
	$(srcdir)/complib/cl_event_wheel.h \
	$(srcdir)/complib/cl_thread.h \
	$(srcdir)/complib/cl_packoff.h \
	$(srcdir)/complib/cl_pool.h \
	$(srcdir)/complib/cl_types_osd.h \
	$(srcdir)/complib/cl_list.h \
	$(srcdir)/complib/cl_atomic.h \
	$(srcdir)/complib/cl_map.h \
	$(srcdir)/complib/cl_timer.h \
	$(srcdir)/complib/cl_event.h \
	$(srcdir)/complib/cl_log.h \
	$(srcdir)/complib/cl_dispatcher.h \
	$(srcdir)/complib/cl_spinlock_osd.h \
	$(srcdir)/complib/cl_debug_osd.h \
	$(srcdir)/complib/cl_qmap.h \
	$(srcdir)/complib/cl_byteswap.h \
	$(srcdir)/complib/cl_threadpool.h \
	$(srcdir)/complib/cl_types.h \
	$(srcdir)/complib/cl_fleximap.h \
	$(srcdir)/complib/cl_qcomppool.h \
	$(srcdir)/complib/cl_nodenamemap.h \
	$(srcdir)/iba/ib_types.h \
	$(srcdir)/iba/ib_cm_types.h \
	$(srcdir)/vendor/osm_vendor_mlx_transport_anafa.h \
	$(srcdir)/vendor/osm_vendor_mlx.h \
	$(srcdir)/vendor/osm_vendor_mlx_sender.h \
	$(srcdir)/vendor/osm_vendor_ibumad.h \
	$(srcdir)/vendor/osm_vendor_mlx_defs.h \
	$(srcdir)/vendor/osm_vendor_mtl_transaction_mgr.h \
	$(srcdir)/vendor/osm_vendor_mlx_sar.h \
	$(srcdir)/vendor/osm_vendor_mlx_dispatcher.h \
	$(srcdir)/vendor/osm_vendor_api.h \
	$(srcdir)/vendor/osm_vendor_umadt.h \
	$(srcdir)/vendor/osm_pkt_randomizer.h \
	$(srcdir)/vendor/osm_vendor_mlx_svc.h \
	$(srcdir)/vendor/osm_vendor_mlx_hca.h \
	$(srcdir)/vendor/osm_vendor_mlx_rmpp_ctx.h \
	$(srcdir)/vendor/osm_vendor_mlx_transport.h \
	$(srcdir)/vendor/osm_vendor_mlx_inout.h \
	$(srcdir)/vendor/osm_vendor_mtl_hca_guid.h \
	$(srcdir)/vendor/osm_vendor_select.h \
	$(srcdir)/vendor/osm_vendor_test.h \
	$(srcdir)/vendor/osm_vendor.h \
	$(srcdir)/vendor/osm_vendor_ts.h \
	$(srcdir)/vendor/osm_vendor_mlx_txn.h \
	$(srcdir)/vendor/osm_vendor_al.h \
	$(srcdir)/vendor/osm_vendor_mtl.h \
	$(srcdir)/vendor/osm_vendor_sa_api.h \
	$(srcdir)/vendor/osm_ts_useraccess.h \
	$(srcdir)/vendor/osm_umadt.h \
	$(srcdir)/vendor/osm_mtl_bind.h

pkgincludedir = $(includedir)/infiniband
