
SUBDIRS = .

nobase_pkginclude_HEADERS = iba/ib_types.h iba/ib_cm_types.h

EXTRA_DIST = \
	$(srcdir)/opensm/osm_lid_mgr.h \
	$(srcdir)/opensm/osm_port.h \
	$(srcdir)/opensm/osm_rand_fwd_tbl.h \
	$(srcdir)/opensm/osm_subnet.h \
	$(srcdir)/opensm/osm_sweep_fail_ctrl.h \
	$(srcdir)/opensm/osm_partition.h \
	$(srcdir)/opensm/osm_node.h \
	$(srcdir)/opensm/osm_console.h \
	$(srcdir)/opensm/osm_console_io.h \
	$(srcdir)/opensm/osm_mcm_info.h \
	$(srcdir)/opensm/osm_inform.h \
	$(srcdir)/opensm/osm_service.h \
	$(srcdir)/opensm/osm_switch.h \
	$(srcdir)/opensm/osm_router.h \
	$(srcdir)/opensm/osm_prefix_route.h \
	$(srcdir)/opensm/osm_opensm.h \
	$(srcdir)/opensm/osm_sa.h \
	$(srcdir)/opensm/osm_port_profile.h \
	$(srcdir)/opensm/osm_multicast.h \
	$(srcdir)/opensm/osm_errors.h \
	$(srcdir)/opensm/osm_mtree.h \
	$(srcdir)/opensm/osm_sm.h \
	$(srcdir)/opensm/osm_lin_fwd_tbl.h \
	$(srcdir)/opensm/osm_ucast_mgr.h \
	$(srcdir)/opensm/osm_db.h \
	$(srcdir)/opensm/osm_remote_sm.h \
	$(srcdir)/opensm/st.h \
	$(srcdir)/opensm/osm_mcast_tbl.h \
	$(srcdir)/opensm/osm_pkey.h \
	$(srcdir)/opensm/osm_pkey_mgr.h \
	$(srcdir)/opensm/osm_sa_mad_ctrl.h \
	$(srcdir)/opensm/osm_mcm_port.h \
	$(srcdir)/opensm/osm_fwd_tbl.h \
	$(srcdir)/opensm/osm_db_pack.h \
	$(srcdir)/opensm/osm_sm_mad_ctrl.h \
	$(srcdir)/opensm/osm_attrib_req.h \
	$(srcdir)/opensm/osm_stats.h \
	$(srcdir)/opensm/osm_vl15intf.h \
	$(srcdir)/opensm/osm_perfmgr.h \
	$(srcdir)/opensm/osm_perfmgr_db.h \
	$(srcdir)/opensm/osm_qos_policy.h \
	$(srcdir)/opensm/osm_qos_parser_y.h \
	$(srcdir)/iba/ib_types.h \
	$(srcdir)/iba/ib_cm_types.h \
	$(srcdir)/vendor/osm_vendor_mlx_transport_anafa.h \
	$(srcdir)/vendor/osm_vendor_mlx.h \
	$(srcdir)/vendor/osm_vendor_mlx_sender.h \
	$(srcdir)/vendor/osm_vendor_ibumad.h \
	$(srcdir)/vendor/osm_vendor_mlx_defs.h \
	$(srcdir)/vendor/osm_vendor_mtl_transaction_mgr.h \
	$(srcdir)/vendor/osm_vendor_mlx_sar.h \
	$(srcdir)/vendor/osm_vendor_mlx_dispatcher.h \
	$(srcdir)/vendor/osm_vendor_umadt.h \
	$(srcdir)/vendor/osm_vendor_mlx_svc.h \
	$(srcdir)/vendor/osm_vendor_mlx_hca.h \
	$(srcdir)/vendor/osm_vendor_mlx_rmpp_ctx.h \
	$(srcdir)/vendor/osm_vendor_mlx_transport.h \
	$(srcdir)/vendor/osm_vendor_mlx_inout.h \
	$(srcdir)/vendor/osm_vendor_mtl_hca_guid.h \
	$(srcdir)/vendor/osm_vendor_select.h \
	$(srcdir)/vendor/osm_vendor_test.h \
	$(srcdir)/vendor/osm_vendor_ts.h \
	$(srcdir)/vendor/osm_vendor_mlx_txn.h \
	$(srcdir)/vendor/osm_vendor_al.h \
	$(srcdir)/vendor/osm_vendor_mtl.h \
	$(srcdir)/vendor/osm_ts_useraccess.h \
	$(srcdir)/vendor/osm_umadt.h \
	$(srcdir)/vendor/osm_mtl_bind.h

pkgincludedir = $(includedir)/infiniband
