dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(libinc, 2.2.0, general@lists.openfabrics.org)
AC_CONFIG_SRCDIR()
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE()
AM_INIT_AUTOMAKE(infiniband, 2.2.0)
AM_PROG_LIBTOOL

dnl Checks for programs
AC_PROG_CC

dnl Checks for libraries
dnl AC_CHECK_LIB - need to provide symbol and library... what do we depend on?

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for library functions
AC_CHECK_FUNCS()

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

AC_CACHE_CHECK(whether ld accepts --version-script, ac_cv_version_script,
    if test -n "`$LD --help < /dev/null 2>/dev/null | grep version-script`"; then
        ac_cv_version_script=yes
    else
        ac_cv_version_script=no
    fi)

AM_CONDITIONAL(HAVE_LD_VERSION_SCRIPT, test "$ac_cv_version_script" = "yes")

# we have to revive the env CFALGS as some how they are being overwritten...
# see http://sources.redhat.com/automake/automake.html#Flag-Variables-Ordering
# for why they should NEVER be modified by the configure to allow for user
# overrides.
CFLAGS=$ac_env_CFLAGS_value

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
